--- a/Express/Counter/package.json
+++ b/Express/Counter/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "TestProject",
+  "name": "Counter",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -12,6 +12,7 @@
   "dependencies": {
     "body-parser": "^1.15.0",
     "ejs": "^2.4.1",
-    "express": "^4.13.4"
+    "express": "^4.13.4",
+    "express-session": "^1.15.6"
   }
 }
