--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,7 +2,6 @@
     "spellright.language": "en",
     "spellright.documentTypes": [
         "markdown",
-        "latex",
-        "plaintext"
+        "latex"
     ]
 }
