has issue - req => style.css

--- a/MongoDB/Intro_to_Mongoose/Mongoose_Dashboard/package.json
+++ b/MongoDB/Intro_to_Mongoose/Mongoose_Dashboard/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Mongoose Dashboard",
+  "name": "Mongoose_Dashboard",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
